...
                                .foregroundColor(.pink)
                        }
                    }
                    .font(.subheadline)
                }
            }
            .navigationTitle(script == nil ? "新しいシナリオ" : "シナリオ編集")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .cancellationAction) {
                    Button("キャンセル") {
                        presentationMode.wrappedValue.dismiss()
                    }
...
